infrastructure/platform/base/policy-reporter/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter-ui-nas
  namespace: policy-reporter
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "policy-reporter-nas.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: policy-reporter-ui-nas
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter-ui-tpi-1
  namespace: policy-reporter
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "policy-reporter-tpi-1.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: policy-reporter-ui-tpi-1
      port: 8080
